# aluminum

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/plans/: architecture.md  moonshots.md  performance.md
.github/workflows/: ci.yml  release.yml
benches/: Cargo.toml  README.md  aluminium.rs  aluminium_bench.rs  aruminium.rs  bench.rs  compare.rs  objc2.rs  objc2_bench.rs  rmetal_bench.rs  shaders.rs
benches/aluminium_bench/: basic.rs  dispatch.rs  encode.rs  mod.rs
docs/: README.md  explanations.md  guide.md  tutorial.md
examples/: README.md  matmul.rs  vecadd.rs
specs/: README.md  api.md
src/: README.md  buffer.rs  command.rs  device.rs  dispatch.rs  encoder.rs  ffi.rs  fp16.rs  lib.rs  pipeline.rs  probe.rs  shader.rs  sync.rs  tests.rs  texture.rs
src/ffi/: README.md  mod.rs  selectors.rs  trampoline.rs
src/probe/: main.rs
tests/: README.md  integration.rs
tools/: Cargo.toml  bench.rs  compare.rs  moonshot.rs  profile.rs  q4k_bench.rs  quant_bench.rs
