[workspace]
members = [".", "benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Cyber"

[workspace.dependencies]
cyb-aruminium = { path = "." }

[package]
name = "cyb-aruminium"
description = "Pure Rust Apple Metal GPU driver — zero deps, direct objc_msgSend FFI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/cybercongress/cyb"
homepage = "https://github.com/cybercongress/cyb"
keywords = ["metal", "gpu", "apple", "compute", "macos"]
categories = ["os::macos-apis", "graphics", "hardware-support"]
readme = "README.md"

[lib]
name = "aruminium"
path = "src/lib.rs"

[[bin]]
name = "metal_probe"
path = "src/probe.rs"

[[example]]
name = "vecadd"
path = "examples/vecadd.rs"

[[example]]
name = "matmul"
path = "examples/matmul.rs"

[profile.release]
lto = "thin"
codegen-units = 1
