[workspace]
members = [".", "benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[package]
name = "aruminium"
description = "light rust metal driver"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository = "https://github.com/cyberia-to/aruminium"
homepage = "https://github.com/cyberia-to/aruminium"
keywords = ["metal", "gpu", "apple", "compute", "macos"]
categories = ["os::macos-apis", "graphics", "hardware-support"]
readme = "README.md"

[lib]
name = "aruminium"
path = "src/lib.rs"

[[bin]]
name = "metal_probe"
path = "src/probe.rs"

[[example]]
name = "vecadd"
path = "examples/vecadd.rs"

[[example]]
name = "matmul"
path = "examples/matmul.rs"

[profile.release]
lto = "thin"
codegen-units = 1
