[package]
name = "metal-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
metal.workspace = true
objc2 = "0.6"
objc2-metal = { version = "0.3", features = ["MTLDevice", "MTLCommandQueue", "MTLCommandBuffer", "MTLComputeCommandEncoder", "MTLComputePipeline", "MTLResource", "MTLBuffer", "MTLLibrary"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSError"] }

[[bin]]
name = "bench"
path = "bench.rs"

[[bin]]
name = "compare"
path = "compare.rs"

[[bin]]
name = "quant_bench"
path = "quant_bench.rs"
